--- a/Code/server/public/index.html
+++ b/Code/server/public/index.html
@@ -21,7 +21,9 @@
     <div class="videoBox">
         <div class="mask"></div>
         <div class="videonSilder">
-            <img id="streamimage" class="xform top" src="http://192.168.43.96:8080/?action=stream">
+            <!-- List of video streaming devices with ip address, this list should be auto generated -->
+            <img id="streamimage1" class="xform top" src="http://192.168.0.109:8080/?action=stream">
+            <img id="streamimage2" class="xform top" src="http://192.168.0.112:8080/?action=stream">
             <video src="video/03.mp4"></video>
             <video src="video/04.mp4"></video>
             <video src="video/05.mp4"></video>
