--- a/Code/server/public/index.html
+++ b/Code/server/public/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <style>
     .wrapper {
-        text-align: center;
-    }
-</style>
-
+    text-align: center;
+}
+    </style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,60 +13,30 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/css.css">
     <title>interface</title>
+    <h1 class="wrapper">Elementice bulletkam</h1>
 </head>
 
 <body>
-    <h1 class="wrapper">Elementice Bulletkam</h1>
+    
     <div class="videoBox">
         <div class="mask"></div>
-        <div class="red"><img src="img/red.png" /></div>
         <div class="videonSilder">
             <!-- List of video streaming devices with ip address, this list should be auto generated -->
-            <img id="streamimage1" class="xform top" src="http://192.168.0.109:8080/?action=stream">
-            <img id="streamimage2" class="xform top" src="http://192.168.0.112:8080/?action=stream">
-            <!-- <img class="top" src="img/test/01.jpg">
-            <video src="video/03.mp4"></video>
-            <img src="img/test/03.jpg">
-            <img src="img/test/04.jpg">
-            <img src="img/test/05.jpg">
-            <img src="img/test/06.jpg">
-            <img src="img/test/07.jpg">
-            <img src="img/test/08.jpg">
-            <img src="img/test/09.jpg">
-            <img src="img/test/10.jpg">
-            <img src="img/test/01.jpg">
-            <img src="img/test/02.jpg">
-            <img src="img/test/03.jpg">
-            <img src="img/test/04.jpg">
-            <img src="img/test/05.jpg">
-            <img src="img/test/06.jpg">
-            <img src="img/test/07.jpg">
-            <img src="img/test/08.jpg">
-            <img src="img/test/09.jpg">
-            <img src="img/test/10.jpg">
-            <img src="img/test/01.jpg">
-            <img src="img/test/02.jpg">
-            <img src="img/test/03.jpg">
-            <img src="img/test/04.jpg">
-            <img src="img/test/05.jpg">
-            <img src="img/test/06.jpg">
-            <img src="img/test/07.jpg">
-            <img src="img/test/08.jpg">
-            <img src="img/test/09.jpg">
-            <img src="img/test/10.jpg"> -->
-            <!-- <video src="video/03.mp4"></video>
-            <video src="video/04.mp4"></video>
-            <video src="video/05.mp4"></video>
-            <video src="video/06.mp4"></video>
-            <video src="video/07.mp4"></video>
-            <video src="video/08.mp4"></video>
-            <video src="video/09.mp4"></video>
-            <video src="video/10.mp4"></video>
-            <video src="video/11.mp4"></video>
-            <video src="video/12.mp4"></video>
-            <video src="video/13.mp4"></video>
-            <video src="video/14.mp4"></video>
-            <video src="video/15.mp4"></video>
+            <img id="streamimage0" class="xform top" src="http://192.168.1.100:8080/?action=stream">
+            <img id="streamimage1" class="xform top" src="http://192.168.1.101:8080/?action=stream">
+            <img id="streamimage2" class="xform top" src="http://192.168.1.102:8080/?action=stream">
+            <img id="streamimage3" class="xform top" src="http://192.168.1.103:8080/?action=stream">
+            <img id="streamimage4" class="xform top" src="http://192.168.1.104:8080/?action=stream">
+            <img id="streamimage5" class="xform top" src="http://192.168.1.105:8080/?action=stream">
+            <img id="streamimage6" class="xform top" src="http://192.168.1.106:8080/?action=stream">
+            <img id="streamimage7" class="xform top" src="http://192.168.1.107:8080/?action=stream">
+            <img id="streamimage8" class="xform top" src="http://192.168.1.108:8080/?action=stream">
+            <img id="streamimage9" class="xform top" src="http://192.168.1.109:8080/?action=stream">
+            <img id="streamimage10" class="xform top" src="http://192.168.1.110:8080/?action=stream">
+            <img id="streamimage11" class="xform top" src="http://192.168.1.111:8080/?action=stream">
+            <img id="streamimage12" class="xform top" src="http://192.168.1.112:8080/?action=stream">
+            <img id="streamimage13" class="xform top" src="http://192.168.1.113:8080/?action=stream">
+            <img id="streamimage14" class="xform top" src="http://192.168.1.114:8080/?action=stream">
             <video src="video/16.mp4"></video>
             <video src="video/17.mp4"></video>
             <video src="video/18.mp4"></video>
@@ -82,7 +51,8 @@
             <video src="video/27.mp4"></video>
             <video src="video/28.mp4"></video>
             <video src="video/29.mp4"></video>
-            <video src="video/30.mp4"></video> -->
+            <video src="video/30.mp4"></video>
+            
         </div>
         <div class="videonControl">
             <div class="swiper-container swiper-no-swiping">
@@ -95,13 +65,6 @@
         </div>
         <div class="camera">
             <img class="cameraBtn" src="img/camera.png">
-            <div class="switch">
-                <div class="btn_fath clearfix off" onclick="toogle(this)">
-                    <div class="move" data-state="off"></div>
-                    <div class="btnSwitch btn1">on</div>
-                    <div class="btnSwitch btn2 ">off</div>
-                </div>
-            </div>
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
